// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Fields > <Hours /> matches the original snapshot 1`] = `
<DocumentFragment>
  <div
    class="react-js-cron-field react-js-cron-hours"
  >
    <span>
      at
    </span>
    <div
      class="ant-select ant-select-outlined react-js-cron-select react-js-cron-custom-select css-var-root ant-select-css-var css-dev-only-do-not-override-ch9ese ant-select-multiple ant-select-show-arrow"
      data-testid="custom-select-hours"
    >
      <div
        class="ant-select-content"
      >
        <div
          class="ant-select-content-item ant-select-content-item-prefix"
          style="opacity: 1;"
        >
          <div
            class="ant-select-placeholder"
            style="visibility: visible;"
          >
            every hour
          </div>
        </div>
        <div
          class="ant-select-content-item ant-select-content-item-suffix"
          style="opacity: 1;"
        >
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="listbox"
            autocomplete="off"
            class="ant-select-input"
            id="test-id"
            readonly=""
            role="combobox"
            style="--select-input-width: 0;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="ant-select-suffix"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Fields > <Minutes /> matches the original snapshot 1`] = `
<DocumentFragment>
  <div
    class="react-js-cron-field react-js-cron-minutes"
  >
    <span>
      :
    </span>
    <div
      class="ant-select ant-select-outlined react-js-cron-select react-js-cron-custom-select css-var-root ant-select-css-var css-dev-only-do-not-override-ch9ese ant-select-multiple ant-select-show-arrow"
      data-testid="custom-select-minutes"
    >
      <div
        class="ant-select-content"
      >
        <div
          class="ant-select-content-item ant-select-content-item-prefix"
          style="opacity: 1;"
        >
          <div
            class="ant-select-placeholder"
            style="visibility: visible;"
          >
            every minute
          </div>
        </div>
        <div
          class="ant-select-content-item ant-select-content-item-suffix"
          style="opacity: 1;"
        >
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="listbox"
            autocomplete="off"
            class="ant-select-input"
            id="test-id"
            readonly=""
            role="combobox"
            style="--select-input-width: 0;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="ant-select-suffix"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Fields > <MonthDays /> matches the original snapshot 1`] = `
<DocumentFragment>
  <div
    class="react-js-cron-field react-js-cron-month-days"
  >
    <span>
      on
    </span>
    <div
      class="ant-select ant-select-outlined react-js-cron-select react-js-cron-custom-select css-var-root ant-select-css-var css-dev-only-do-not-override-ch9ese ant-select-multiple ant-select-show-arrow"
      data-testid="custom-select-month-days"
    >
      <div
        class="ant-select-content"
      >
        <div
          class="ant-select-content-item ant-select-content-item-prefix"
          style="opacity: 1;"
        >
          <div
            class="ant-select-placeholder"
            style="visibility: visible;"
          >
            every day of the month
          </div>
        </div>
        <div
          class="ant-select-content-item ant-select-content-item-suffix"
          style="opacity: 1;"
        >
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="listbox"
            autocomplete="off"
            class="ant-select-input"
            id="test-id"
            readonly=""
            role="combobox"
            style="--select-input-width: 0;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="ant-select-suffix"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Fields > <Months /> matches the original snapshot 1`] = `
<DocumentFragment>
  <div
    class="react-js-cron-field react-js-cron-months"
  >
    <span>
      in
    </span>
    <div
      class="ant-select ant-select-outlined react-js-cron-select react-js-cron-custom-select css-var-root ant-select-css-var css-dev-only-do-not-override-ch9ese ant-select-multiple ant-select-show-arrow"
      data-testid="custom-select-months"
    >
      <div
        class="ant-select-content"
      >
        <div
          class="ant-select-content-item ant-select-content-item-prefix"
          style="opacity: 1;"
        >
          <div
            class="ant-select-placeholder"
            style="visibility: visible;"
          >
            every month
          </div>
        </div>
        <div
          class="ant-select-content-item ant-select-content-item-suffix"
          style="opacity: 1;"
        >
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="listbox"
            autocomplete="off"
            class="ant-select-input"
            id="test-id"
            readonly=""
            role="combobox"
            style="--select-input-width: 0;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="ant-select-suffix"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Fields > <Period /> matches the original snapshot 1`] = `
<DocumentFragment>
  <div
    class="react-js-cron-field react-js-cron-period"
  >
    <span>
      Every
    </span>
    <div
      class="ant-select ant-select-outlined react-js-cron-select css-var-root ant-select-css-var css-dev-only-do-not-override-ch9ese ant-select-single ant-select-show-arrow"
      data-testid="select-period"
    >
      <div
        class="ant-select-content ant-select-content-has-value"
        title="year"
      >
        year
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="listbox"
          autocomplete="off"
          class="ant-select-input"
          id="test-id"
          readonly=""
          role="combobox"
          type="search"
          value=""
        />
      </div>
      <div
        class="ant-select-suffix"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Fields > <WeekDays /> matches the original snapshot 1`] = `
<DocumentFragment>
  <div
    class="react-js-cron-field react-js-cron-week-days"
  >
    <span>
      on
    </span>
    <div
      class="ant-select ant-select-outlined react-js-cron-select react-js-cron-custom-select css-var-root ant-select-css-var css-dev-only-do-not-override-ch9ese ant-select-multiple ant-select-show-arrow"
      data-testid="custom-select-week-days"
    >
      <div
        class="ant-select-content"
      >
        <div
          class="ant-select-content-item ant-select-content-item-prefix"
          style="opacity: 1;"
        >
          <div
            class="ant-select-placeholder"
            style="visibility: visible;"
          >
            every day of the week
          </div>
        </div>
        <div
          class="ant-select-content-item ant-select-content-item-suffix"
          style="opacity: 1;"
        >
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="listbox"
            autocomplete="off"
            class="ant-select-input"
            id="test-id"
            readonly=""
            role="combobox"
            style="--select-input-width: 0;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="ant-select-suffix"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
